trunk/Archive2/ed/14e1b9fc7bee93/output
main.cpp:13:13: error: no matching function for call to 'foo'
int main(){ foo(b); }
            ^~~
main.cpp:11:6: note: candidate function not viable: no known conversion from 'const B' to 'A' for 1st argument
void foo(A){ };
     ^
1 error generated.
