trunk/Archive2/ed/14e1b9fc7bee93/main.cpp
struct A{ };

struct B
{
    B(){ };
    operator A(){ return A(); }
};

const B b;

void foo(A){ };

int main(){ foo(b); }